# study

Algorithms_and_data_structures/: binary_searches.cpp  dynamic_rmq_new.cpp  dynamic_rmq_rsq.cpp  fenwick_tree.cpp  knapsack_problem.cpp  longest_common_subsequence.cpp  longest_increasing_subsequence.cpp  matrix_factorial.cpp  palindrome_subsequences.cpp  random_number_generator.cpp  static_rmq_online.cpp  static_rsq_online.cpp
Algorithms_and_data_structures/Data_structures/: HashTable.cpp  double_linked_list.cpp  heap.cpp  queue.cpp  singly_linked_list.cpp  stack.cpp  stack_min.cpp  two_stack_queue.cpp
Algorithms_and_data_structures/Data_structures/Trees/: avl_tree.cpp  b-tree.cpp  binary_search_tree.cpp  red_black_tree.cpp  splay-tree.cpp
Algorithms_and_data_structures/Graphs/: a_star.cpp  bfs.cpp  dfs.cpp  flows.cpp  get_distance_using_bfs.cpp  get_euler_path.cpp  kosaraju_algorithm.cpp  minimal_spanning_tree.cpp  shortest_path_search_algorithms.cpp  tarjan_algorithm_of_topsort.cpp
Algorithms_and_data_structures/Sorts/: HeapSort.cpp  InsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  dutch_flag_algorithm.cpp  k-th_order_statistics.cpp
Algorithms_and_data_structures/Strings/: Aho_Korasick_algorithm.cpp  Knut_Morris_Pratt.cpp  z-function.cpp
Algorithms_and_data_structures/Strings/rabin_karp_qt/: bigint.cpp  bigint.h  long_long_mod.cpp  long_long_mod.h  main.cpp  rabin_karp_qt.pro
C++/: BigInt.cpp  C_complex_types.cpp  String.cpp  Vector_without_allocator_and_move_semantics.cpp  distance.cpp  optional.cpp  singleton.cpp  unique_ptr.cpp
C++/Complex/: CMakeLists.txt  complex.cpp  complex.h  main.cpp
C++/Deque/: CMakeLists.txt  deque.hpp  main.cpp
C++/Geometry/: CMakeLists.txt  exceptions.h  main.cpp
C++/Geometry/primitives/: dot.cpp  dot.h  line.cpp  line.h  segment.cpp  segment.h  vector.cpp  vector.h
C++/Geometry/shapes/: convex_polygon.cpp  convex_polygon.h  parallelogramm.cpp  parallelogramm.h  quadrilateral.cpp  quadrilateral.h  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  shape.h  square.cpp  square.h  trapezium.cpp  trapezium.h
C++/Matrix/: CMakeLists.txt  main.cpp  matrix.h
C++/allocators_tests/: CMakeLists.txt  main.cpp  stack_allocator.hpp
C++/function/: CMakeLists.txt  function.hpp  main.cpp
C++/shared_ptr/: CMakeLists.txt  base_control_block.hpp  control_block.hpp  control_block_make_shared.hpp  control_block_with_deleter_and_allocator.hpp  enable_shared_from_this.hpp  main.cpp  shared_ptr.hpp  smart_pointer_base.hpp  weak_ptr.hpp
C++/unordered_map/: CMakeLists.txt  equal_functor.hpp  hash.hpp  hash_functor.hpp  main.cpp  unordered_map.hpp
C++/variant/: CMakeLists.txt  get_index_by_type.hpp  get_type_by_index.hpp  is_nullptr.hpp  main.cpp  max_alignof.hpp  max_sizeof.hpp  variant.hpp
Concurrency/: condition_variable.cpp  cyclic_barrier.cpp  deadlocks.cpp  mutex.cpp  mutexed.cpp  semaphore.cpp  spinlock.cpp  spinlocks.cpp  thread_pool.cpp  wait_group.cpp
Concurrency/Atomic/: CMakeLists.txt  atomic.cpp  atomic.h  c_functions.h  functions.S  main.cpp  spinlock.cpp  spinlock.h
Concurrency/coroutine/: CMakeLists.txt  coroutine.cpp  coroutine.hpp  execution_context.S  execution_context.cpp  execution_context.hpp  main.cpp  this_coro.cpp  this_coro.hpp
Concurrency/dining_philosophers/: CMakeLists.txt  fork.cpp  fork.hpp  main.cpp  philosopher.cpp  philosopher.hpp  table.cpp  table.hpp
Concurrency/echo_server/: CMakeLists.txt  main.cpp
Concurrency/echo_server/asio/: epoll_based.cpp  thread_per_connection.cpp
Concurrency/echo_server/syscalls/: epoll.c  thread-per-connection.c
Concurrency/exe/: CMakeLists.txt  exe.hpp  fiber.cpp  fiber.hpp  main.cpp
Concurrency/exe/fiber/core/: body.hpp  fiber.cpp  fiber.hpp
Concurrency/exe/fiber/sched/: sched.cpp  sched.hpp
Concurrency/exe/runtime/: multi_thread.hpp  sandbox.hpp  set_timer.hpp  submit_task.hpp  view.hpp
Concurrency/exe/runtime/multi_thread/: blocking_queue.hpp  runtime.cpp  runtime.hpp  thread_pool.cpp  thread_pool.hpp  timer_thread.cpp  timer_thread.hpp
Concurrency/exe/runtime/sandbox/: clock.hpp  manual_loop.cpp  manual_loop.hpp  runtime.cpp  runtime.hpp  timer_queue.hpp
Concurrency/exe/runtime/task/: scheduler.hpp  task.hpp
Concurrency/exe/runtime/timer/: duration.hpp  handler.hpp  scheduler.hpp
Concurrency/exe/runtime/view/: get.cpp  tasks.hpp  timers.hpp
Concurrency/exe/schedulers/: i_scheduler.hpp
Concurrency/exe/schedulers/manual_loop/: manual_loop.cpp  manual_loop.hpp
Concurrency/exe/schedulers/thread_pool/: thread_pool.hpp
Concurrency/exe/thread/: wait_group.cpp  wait_group.hpp
Concurrency/exe/utils/: utils.cpp  utils.hpp
Concurrency/fiber/: CMakeLists.txt  execution_context.cpp  execution_context.hpp  fiber.cpp  fiber.hpp  functions_asm.S  main.cpp  scheduler.cpp  scheduler.hpp
Concurrency/stdlike_future/: CMakeLists.txt  future.hpp  main.cpp  promise.hpp  shared_state.hpp
Concurrency/thread_pool/: CMakeLists.txt  blocking_queue.hpp  main.cpp  thread_pool.cpp  thread_pool.hpp  wait_group.cpp  wait_group.hpp
